fix(style): remove body overflow and use svh unit for height
The previous attempt for fixing the responsive mobile issues didn't work.

This new solution uses svh unit and removes the overflow from body which hopefully will stop the buttons from getting cut off at the bottom of screen.

--- a/main.css
+++ b/main.css
@@ -17,13 +17,12 @@
 body {
   font-family: "Exo", sans-serif;
   color: var(--secondary-color);
-  overflow: hidden;
   margin: 0%;
   padding: 0%;
 }
 
 #main-slider {
-  height: 100%;
+  height: 100svh;
 }
 
 .slider-container {
@@ -96,7 +95,7 @@ body {
   }
   .slider-container {
     max-width: 70vw;
-    margin-bottom: 30px
+    margin-bottom: 30px;
   }
 }
 
